# C64-MC

./: .gitignore  C64MC.opam  README.md  chiptune sample.asm  dune-project  exampleCodeFinalFinalFinal.txt  github.md  output.asm  source_language_1  src_language_1  src_language_2
.github/workflows/: CI.yml  maincheck.yml  run_fail.js  run_succes.js  run_tests.js  run_tests.yml  test.yml
codegen/: dune  instructionGen.ml  instructionSet.ml  stdlib.ml
exceptions/: dune  exceptions.ml
lib/: ast.ml  ast_final.ml  ast_src.ml  ast_tgt.ml  ast_translate.ml  ast_translate.mli  checkNames.ml  dune  lexer.mll  parser.mly  pprint.ml  pprint_final.ml  pprint_src.ml  pprint_tgt.ml  runtime_options.ml  symbol_table.ml  utils.ml
src_code_samples/: percussion_sample.nptn
test/: dune
tests/: dune  lillepeteredderkop.C64MC  secret.C64MC  test000  test000.C64MC  test_ast_translate.ml  test_codegen.ml  test_symbol_table.ml  unit_tests.ml
tests/fail/: test000.C64MC  test000.nptn  test001.C64MC  test002.C64MC  test002.nptn  test003.C64MC  test003.nptn  test004.C64MC  test005.C64MC  test005.nptn  test006.C64MC  test006.nptn  test007.C64MC  test008.C64MC  test009.C64MC  test009.nptn  test010.C64MC  test010.nptn  test011.C64MC  test011.nptn  test012.C64MC  test012.nptn  test013.C64MC  test013.nptn  test014.C64MC  test014.nptn  test015.C64MC  test1.C64MC  test2.C64MC  test3.C64MC
tests/succes/: percussion.C64MC  percussion.nptn  test000.nptn  test001.C64MC  test002.C64MC  test003.C64MC  test004.nptn  test005.C64MC  test006.C64MC  test007.C64MC  test008.nptn  test009.C64MC  test010.C64MC  tetris.nptn
