# This is an example package definition file
opam-version: "2.0"
maintainer: "maintainer@example.com"
authors: "Author Name"
license: "MIT"
homepage: "https://example.com"
bug-reports: "https://example.com/issues"
dev-repo: "git+https://github.com/P4-Group/C64-MC.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
